# rotel-lambda-extension

./: Cargo.toml  DEVELOPING.md  Makefile  README.md  RELEASING.md  rust-toolchain.toml
.github/workflows/: auto-release.yml  bump-version.yml  ci.yml  release.yml
scripts/: manual-deploy.sh  publish-lambda-version.sh  update-release-layer-versions.sh
src/: env.rs  lib.rs  main.rs  test_util.rs
src/aws_api/: arn.rs  auth.rs  client.rs  config.rs  error.rs  mod.rs  paramstore.rs  secretsmanager.rs
src/lambda/: api.rs  constants.rs  logs.rs  mod.rs  telemetry_api.rs  types.rs
src/lifecycle/: flush_control.rs  invocation_rate.rs  mod.rs
src/secrets/: client.rs  error.rs  mod.rs  paramstore.rs  secretsmanager.rs
src/util/: http.rs
