[package]
name = "rotel-extension"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/streamfold/rotel-lambda-extension"
readme = "README.md"
rust-version = "1.85.1"

[dependencies]
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
lambda-extension = { git = "https://github.com/streamfold/aws-lambda-rust-runtime", branch = "json-record-types" }
http-body-util = "0.1.2"
bytes = "1.9.0"
serde = "1"
tokio-util = "0.7.13"
serde_json = "1.0.135"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
http = "1.2.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
futures = "0.3.31"
tower-http = { version = "0.6.2", features = ["limit", "trace", "compression-gzip", "validate-request"] }
dotenvy = { git = "https://github.com/streamfold/dotenvy", branch = "custom-substitution" }
rustls = "0.23.20"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tower = { version = "0.5.2", features = ["retry", "timeout"] }
rotel = { git = "https://github.com/streamfold/rotel", rev = "cdf105e6de727f0034bdb4da1edb9a9a65b0fd50" }
opentelemetry-proto = "0.29.0"
chrono = "0.4.40"
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
hyper-rustls = "0.27.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.19.1"
